# dls_ade

./: .coveragerc  .git_commit_template.txt  .gitattributes  .gitignore  .gitlab-ci.yml  .gitremotes  .landscape.yml  .travis.yml  GRAYLOG_TOKEN.md  Makefile  README  README.md  dls-release.py  dls_environment.py  dls_release.py  dls_release_test.py  dlsbuild.py  requirements.txt  setup.cfg  setup.py  vcs.py  vcs_git.py  vcs_git_test.py  vcs_svn.py  vcs_svn_test.py
dls_ade/: __init__.py  argument_parser.py  argument_parser_test.py  bitbucketserver.py  bitbucketserver_test.py  constants.py  dls_changes_since_release.py  dls_changes_since_release_test.py  dls_checkout_module.py  dls_checkout_module_test.py  dls_environment.py  dls_environment_test.py  dls_gitlab_ci_validate.py  dls_gitlab_ci_validate_test.py  dls_install_packages.py  dls_last_release.py  dls_last_release_test.py  dls_list_branches.py  dls_list_branches_test.py  dls_list_modules.py  dls_list_modules_test.py  dls_list_releases.py  dls_list_releases_test.py  dls_logs_since_release.py  dls_logs_since_release_test.py  dls_module_contacts.py  dls_module_contacts_test.py  dls_pipfilelock_to_venv.py  dls_pipfilelock_to_venv_test.py  dls_populate_dist.py  dls_populate_dist_test.py  dls_python3_check.py  dls_python3_check_test.py  dls_release.py  dls_release_test.py  dls_start_new_module.py  dls_start_new_module_test.py  dls_tar_module.py  dls_tar_module_test.py  dls_utilities.py  (+29 more)
dls_ade/module_templates/python3/: setup.cfg  setup.py_template
dls_environment/: __init__.py  dls_environment.py  dlsbuild.py  svn.py  (+4 more)
(+198 files in other folders)
