[metadata]
name = {module_name:s}
version = file: {module_name:s}/VERSION
# description = Module  # a short description of the module
author = '{full_name:s}',
author_email = '{email:s}',
license = Apache License 2.0
long_description = file: README.rst

[options]
packages = {module_name:s}
# install_requires = cothread
# If you want to include data files in packages,
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.package_data]
{module_name:s} = VERSION