[metadata]
name = {module_name:s}
version = file: {module_name:s}/VERSION
# description = Module  # a short description of the module
author = '{full_name:s}',
author_email = '{email:s}',
license = Apache License 2.0
long_description = file: README.rst

[options]
# Locate packages automatically
packages = find:
# Specify dependencies:
# install_requires =
#    cothread
#    numpy
#
# If you want to include data files in packages,
# set following to True and include a MANIFEST.in file.
include_package_data = False

[options.package_data]
{module_name:s} = VERSION
